# my_flow_app

./: .dockerignore  .env.template  .env.template.bak2  .gitignore  CONTRIBUTING.md  PRESENTATION.md  PROFESSIONAL_SETUP_SUMMARY.md  README.md  bun.lockb  docker-compose.prod.yml  docker-compose.yml  my-flow-vision.md  package-lock.json  package.json  project_rubric.md
.bmad-core/: install-manifest.yaml
.github/: PROFESSIONAL_SETUP_GUIDE.md  PULL_REQUEST_CHECKLIST.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  backend-ci.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  docker-ci.yml  frontend-ci.yml
.husky/: README.md  pre-commit  pre-push
docs/: architecture.md  brief.md  front-end-spec.md  prd.md
docs/architecture/: 10-development-workflow.md  11-deployment-architecture.md  12-security-and-performance.md  13-testing-strategy.md  15-error-handling-strategy.md  16-monitoring-and-observability.md  17-architecture-validation-report.md  9-unified-project-structure.md  api-specification.md  backend-architecture.md  coding-standards.md  components.md  data-models.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  source-tree.md  tech-stack.md
docs/deployment/: docker-deployment.md
docs/prd/: checklist-results-report.md  epic-1-foundation-authentication-project-setup.md  epic-2-context-flow-data-layer-with-ui-foundation.md  epic-3-ai-conversational-interface-flow-extraction.md  epic-4-transition-intelligence-contextual-mock-data.md  epic-5-comprehensive-testing-performance-optimization-production-deployment.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/gates/: 1.1-project-structure.yml  1.2-logto-backend-auth.yml  1.3-logto-authentication-setup-frontend.yml  1.4-mongodb-atlas-setup-connection.yml  1.5-css-tokens-developer-experience.yml  2.1-context-flow-models.yml  2.2-context-repository-crud.yml  2.3-flow-repository-crud.yml  (+17 more)
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  1.5.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md  2.7.story.md  2.8.story.md  2.9.story.md  3.1.story.md  3.2.story.md  3.3.story.md  3.4.story.md  3.5.story.md  3.6.story.md  3.7.story.md  3.8.story.md  4.1.story.md  4.2.story.md  4.3.story.md  4.4.story.md  4.5.story.md  4.6.story.md  5.0.story.md
docs/ux-design-tokens/: component-styling-guide.md  css-tokenization-spec.md  css-tokens-usage.md  token-system-update-2.0.md
my_flow_api/: .coveragerc  .dockerignore  .env.template  Dockerfile  Dockerfile.dev  README.md  dev.sh  main.py  mypy.ini  pyproject.toml  pytest.ini
my_flow_api/docs/: api-testing.md
my_flow_api/scripts/: manual_flow_extraction.py  test_flow_extraction.py
my_flow_api/src/: __init__.py  config.py  database.py  dependencies.py  main.py  rate_limit.py
my_flow_api/src/middleware/: auth.py
my_flow_api/src/models/: __init__.py  context.py  conversation.py  errors.py  flow.py  pagination.py  summary.py  transition.py  user_preferences.py
my_flow_api/src/repositories/: __init__.py  base.py  context_repository.py  conversation_repository.py  exceptions.py  flow_repository.py  user_preferences_repository.py
my_flow_api/src/routers/: __init__.py  contexts.py  conversations.py  flows.py  health.py  preferences.py  transitions.py
my_flow_api/src/services/: ai_service.py  ai_tools.py  cache_service.py  transition_service.py
my_flow_api/src/utils/: exceptions.py
my_flow_api/tests/: conftest.py
my_flow_api/tests/integration/: test_auth_routes.py  test_contexts_summary.py  test_database_integration.py  test_flow_extraction_integration.py  test_transitions_warnings.py
my_flow_api/tests/integration/repositories/: __init__.py  conftest.py  test_context_repository.py  test_conversation_repository.py  test_flow_repository.py
my_flow_api/tests/integration/routers/: __init__.py  conftest.py  test_contexts.py  test_conversations.py  test_flows.py  test_flows_fixed2.py  test_transitions.py  test_transitions_warnings.py
my_flow_api/tests/unit/: test_config.py  test_database.py  test_main.py
my_flow_api/tests/unit/middleware/: test_auth.py
my_flow_api/tests/unit/models/: test_context.py  test_flow.py
my_flow_api/tests/unit/services/: test_ai_service.py  test_ai_summary.py  test_flow_extraction.py  test_transition_service.py
my_flow_client/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  README.md  eslint-local-rules.mjs  eslint.config.mjs  logto-custom.css  my-flow-technical.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-ci-lint.sh  tsconfig.json  vitest.config.ts
my_flow_client/e2e/: auth.spec.ts
my_flow_client/src/: test-setup.tsx
scripts/: load-secrets.sh  run_backend_tests.sh  setup-1password.sh
(+136 files in other folders)
