[project]
name = "my-flow-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.3.0",
    "uvicorn[standard]>=0.37.0",
    "slowapi>=0.1.9",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "types-python-jose>=3.5.0.20250531",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable strict rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, variables, etc)
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations (type hints required)
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments (catches unused params/vars)
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

ignore = [
    "PLW0603", # Allow global statement for database connection pattern
    "PLR2004", # Allow magic values in tests
    "B008",    # Allow Depends() in function arguments (FastAPI dependency injection pattern)
    "PLR0913", # Allow more than 5 function arguments (FastAPI route handlers often have many dependencies)
]

# Allow unused variables when they start with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",     # Don't require type hints in tests
    "ARG",     # Allow unused arguments in test fixtures
]
